--- a/module/Blog/view/blog/post/index.phtml
+++ b/module/Blog/view/blog/post/index.phtml
@@ -19,6 +19,12 @@
                 <p>
                     <?php echo $this->escapeHtml($post->getText());?>
                 </p>
+                <?php
+                    //var_dump($post->getTags());
+                    /*$this->partial('/partial/tags.phtml', array(
+                        'tags' => $post->getTags()
+                    ));*/
+                ?>
                 <aside>
                     <a class="edit-post btn btn-info" href="/blog/post/edit/<?php echo $post->getId(); ?>">Edit this Post</a>
                     &nbsp;
